--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   push:
     # Runs on pushes targeting the default branch
     branches: [main]
-  workflow_dispatch
+  workflow_dispatch:
 
 env:
   # `BASE_URL` determines the website is served from, including CSS & JS assets
