--- a/myst.yml
+++ b/myst.yml
@@ -12,7 +12,7 @@ project:
 
   jupyter:
     binder:
-      url: https://binder.opensci.2i2c.cloud/
+      url: https://binder.projectpythia.org/
   references:
     shared: https://2i2c.org/demo-shared-content
 
