Revert "chore: update binder URL"
This reverts commit 26fdeda2360b4e846f80e918926d38ae363661c9.

--- a/myst.yml
+++ b/myst.yml
@@ -12,7 +12,7 @@ project:
 
   jupyter:
     binder:
-      url: https://binder.projectpythia.org/
+      url: https://binder.opensci.2i2c.cloud/
   references:
     shared: https://2i2c.org/demo-shared-content
 
